k3s/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-v2
  namespace: canary-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-demo
      version: canary
  template:
    metadata:
      labels:
        app: canary-demo
        version: canary
    spec:
      containers:
        - name: canary
          image: canary-canary:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
