k3s/stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-v1
  namespace: canary-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-demo
      version: stable
  template:
    metadata:
      labels:
        app: canary-demo
        version: stable
    spec:
      containers:
        - name: stable
          image: canary-stable:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
