k3s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: canary-demo
spec:
  selector:
    app: canary-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
