k3s/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  namespace: canary-demo
spec:
  selector:
    app: canary-demo
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
