k3s/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-service
  namespace: canary-demo
spec:
  selector:
    app: canary-demo
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
